<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgraund"
    tools:context=".Login">


    <TextView
        android:id="@+id/id_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bikesared"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/titilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/id_log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/componentes"
        style="@style/ContainerComponente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titilo" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_text"
        android:drawableRight="@drawable/ic_email"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/componentes"
        app:layout_constraintStart_toStartOf="@id/componentes"
        app:layout_constraintTop_toTopOf="@id/componentes"

        />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_text"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="textPassword"
        android:hint="Senha"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/componentes"
        app:layout_constraintStart_toStartOf="@id/componentes"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/id_button_acesso"
        style="@style/Button"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/id_criarConta"
        style="@style/Button"
        android:text="@string/Criar_conta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_button_acesso" />
    <ProgressBar
        android:id="@+id/prograssBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/componentes"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>