<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgraund"
    tools:context=".Criar_conta"
    tools:layout_editor_absoluteX="-17dp"
    tools:layout_editor_absoluteY="149dp">
    <TextView
        android:id="@+id/id_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bikesared"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/titilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titilo_cadastro"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/id_log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <View
        android:id="@+id/conteinerComponnte"
        style="@style/ContainerComponente"
        app:layout_constraintTop_toBottomOf="@+id/titilo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/id_txt_nome"
        style="@style/Edit_text"
        android:hint="Nome"
        android:textColor="@color/black"
        android:inputType="text"
        android:drawableRight="@drawable/ic_person"
        app:layout_constraintTop_toTopOf="@id/conteinerComponnte"
        app:layout_constraintStart_toStartOf="@id/conteinerComponnte"
        app:layout_constraintStart_toEndOf="@id/conteinerComponnte"
        />
    <EditText
        android:id="@+id/id_txt_email"
        style="@style/Edit_text"
        android:hint="Email"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:drawableRight="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="@id/conteinerComponnte"
        app:layout_constraintStart_toEndOf="@id/conteinerComponnte"
        app:layout_constraintTop_toBottomOf="@id/id_txt_nome"
    />
    <EditText
        android:id="@+id/id_txt_senha"
        style="@style/Edit_text"
        android:hint="Senha"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:drawableRight="@drawable/ic_eye"
        app:layout_constraintStart_toStartOf="@id/conteinerComponnte"
        app:layout_constraintStart_toEndOf="@id/conteinerComponnte"
        app:layout_constraintTop_toBottomOf="@id/id_txt_email"
        />
    <EditText
        android:id="@+id/id_txt_confirmar"
        style="@style/Edit_text"
        android:hint="Confirmar senha"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:drawableRight="@drawable/ic_eye"
        app:layout_constraintStart_toStartOf="@id/conteinerComponnte"
        app:layout_constraintStart_toEndOf="@id/conteinerComponnte"
        app:layout_constraintTop_toBottomOf="@id/id_txt_senha"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/id_confirmar"
        style="@style/Button"
        android:text="@string/confimar_cadastro"
        app:layout_constraintTop_toBottomOf="@id/conteinerComponnte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/id_cancelar"
        style="@style/Button"
        android:text="@string/cancelar_cadastro"
        app:layout_constraintTop_toBottomOf="@id/id_confirmar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>


